# 8V42_Bogomolov_programming_3sem_lab2

./: CMakeLists.txt  ip_filter.cpp  ip_filter.h  main.cpp  test_ip.cpp
.github/workflows/: release.yml
